docs(文档(用法)): 编译选项
用ECJ编译Java源文件时的编译选项

BREAKING CHANGE: NO

Closes NO